structured scss files

--- a/index.html
+++ b/index.html
@@ -5,21 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joo's Restaurant</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Open+Sans&family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./dist/main.min.css">
 </head>
 <body>
     <main>
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">MENU</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
         <header>
-            <div class="logo"></div>
-            <nav class="mobile-nav">
-                <div class="menu"></div>
+            <div class="logo"><img src="./dist/images/logo.png" alt="Logo"></div>
+            <div class="menu"></div>
+            <nav class="desktop-nav">
                 <ul>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
-                    <li><a href="#"></a></li>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">MENU</a></li>
+                    <li><a href="#">CONTACT</a></li>
                 </ul>
             </nav>
-            <nav class="desktop-nav"></nav>
         </header>
     </main>
 
