--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Joo's Restaurant</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Open+Sans&family=Oswald&display=swap" rel="stylesheet">
+    <link href="dist/hamburgers.css" rel="stylesheet">
     <link rel="stylesheet" href="./dist/main.min.css">
 </head>
 <body>
@@ -20,7 +21,13 @@
         </nav>
         <header>
             <div class="logo"><img src="./dist/images/logo.png" alt="Logo"></div>
-            <div class="menu"></div>
+            <div class="menu">
+                <button class="hamburger hamburger--collapse" type="button">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+            </div>
             <nav class="desktop-nav">
                 <ul>
                     <li><a href="#">HOME</a></li>
