--- a/index.html
+++ b/index.html
@@ -20,22 +20,24 @@
             </ul>
         </nav>
         <header>
-            <div class="logo"><img src="./dist/images/logo.png" alt="Logo"></div>
-            <div class="menu">
-                <button class="hamburger" type="button">
-                    <span class="hamburger-box">
-                        <span class="hamburger-inner"></span>
-                    </span>
-                </button>
+            <div class="header-wrap">
+                <div class="logo"><img src="./dist/images/logo.png" alt="Logo"></div>
+                <div class="menu">
+                    <button class="hamburger" type="button">
+                        <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                        </span>
+                    </button>
+                </div>
+                <nav class="desktop-nav">
+                    <ul>
+                        <li><a href="#">HOME</a></li>
+                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="#">MENU</a></li>
+                        <li><a href="#">CONTACT</a></li>
+                    </ul>
+                </nav>
             </div>
-            <nav class="desktop-nav">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">MENU</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-            </nav>
         </header>
     </main>
 
