styled mobile nav

--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Open+Sans&family=Oswald&display=swap" rel="stylesheet">
     <link href="dist/hamburgers.css" rel="stylesheet">
+    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="./dist/main.min.css">
 </head>
 <body>
     <main>
         <nav class="mobile-nav">
-            <ul>
+            <ul class="page-links">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">MENU</a></li>
                 <li><a href="#">CONTACT</a></li>
+            </ul>
+            <ul class="social-links">
+                <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
+                <a href="#"><li><i class="fab fa-twitter"></i></li></a>
+                <a href="#"><li><i class="fab fa-instagram"></i></li></a>
             </ul>
         </nav>
         <header>
