--- a/index.html
+++ b/index.html
@@ -11,41 +11,41 @@
     <link rel="stylesheet" href="./dist/main.min.css">
 </head>
 <body>
-    <main>
-        <nav class="mobile-nav">
-            <ul class="page-links">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">MENU</a></li>
-                <li><a href="#">CONTACT</a></li>
-            </ul>
-            <ul class="social-links">
-                <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
-                <a href="#"><li><i class="fab fa-twitter"></i></li></a>
-                <a href="#"><li><i class="fab fa-instagram"></i></li></a>
-            </ul>
-        </nav>
-        <header>
-            <div class="header-wrap">
-                <div class="logo"><img src="./dist/images/logo.png" alt="Logo"></div>
-                <div class="menu">
-                    <button class="hamburger" type="button">
-                        <span class="hamburger-box">
-                            <span class="hamburger-inner"></span>
-                        </span>
-                    </button>
-                </div>
-                <nav class="desktop-nav">
-                    <ul>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">MENU</a></li>
-                        <li><a href="#">CONTACT</a></li>
-                    </ul>
-                </nav>
+    <main class="home-bg"></main>
+    
+    <nav class="mobile-nav">
+        <ul class="page-links">
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">MENU</a></li>
+            <li><a href="#">CONTACT</a></li>
+        </ul>
+        <ul class="social-links">
+            <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
+            <a href="#"><li><i class="fab fa-twitter"></i></li></a>
+            <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+        </ul>
+    </nav>
+    <header>
+        <div class="header-wrap">
+            <div class="logo"><img src="./dist/images/logo.png" alt="Logo"></div>
+            <div class="menu">
+                <button class="hamburger" type="button">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
             </div>
-        </header>
-    </main>
+            <nav class="desktop-nav">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">MENU</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
