--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="showcase-ad">
                 <div class="title"></div>
                 <h1>HALF POUND BURGER</h1>
-                <button type="button" class="btn">MORE INFO</button>
+                <button type="button" class="btn-primary">MORE INFO</button>
             </div>
         </section>
     </main>
