basic showcase done

--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 <body>
     <main class="home-bg">
         <section class="ad">
-            <div class="price"></div>
+            <div class="price">
+                <div>
+                    <h3>ONLY</h3>
+                    <h1><span>$</span>3.99</h1>
+                </div>
+            </div>
             <div class="showcase-ad">
-                <div class="title"></div>
-                <h1>HALF POUND BURGER</h1>
+                <div class="title">
+                    <h2>Best Offer</h2>
+                </div>
+                <h1 class="heading">HALF POUND <br> BURGER</h1>
                 <button type="button" class="btn-primary">MORE INFO</button>
             </div>
         </section>
