--- a/index.html
+++ b/index.html
@@ -10,24 +10,7 @@
     <link rel="stylesheet" href="./dist/main.min.css">
 </head>
 <body>
-    <main class="home-bg">
-        <section class="ad">
-            <div class="price">
-                <div>
-                    <h3>ONLY</h3>
-                    <h1><span>$</span>3.99</h1>
-                </div>
-            </div>
-            <div class="showcase-ad">
-                <div class="title">
-                    <h2>Best Offer</h2>
-                </div>
-                <h1 class="heading">HALF POUND <br> BURGER</h1>
-                <button type="button" class="btn-primary">MORE INFO</button>
-            </div>
-        </section>
-    </main>
-    
+    <!--header, nav-->
     <nav class="mobile-nav">
         <ul class="page-links">
             <li><a href="#">HOME</a></li>
@@ -61,6 +44,30 @@
             </nav>
         </div>
     </header>
+    <!--home showcase-->
+    <main class="home-bg">
+        <section class="ad">
+            <div class="price">
+                <div>
+                    <h3>ONLY</h3>
+                    <h1><span>$</span>3.99</h1>
+                </div>
+            </div>
+            <div class="showcase-ad">
+                <div class="title">
+                    <h2>Best Offer</h2>
+                </div>
+                <h1 class="heading">HALF POUND <br> BURGER</h1>
+                <button type="button" class="btn-primary">MORE INFO</button>
+            </div>
+        </section>
+        <div class="smoke-wrap">
+            <div class="smoke"><img src="./dist/images/smoke.png" alt="Smoke"><img src="./dist/images/smoke.png" alt="Smoke"></div>
+            <div class="smoke"><img src="./dist/images/smoke.png" alt="Smoke"><img src="./dist/images/smoke.png" alt="Smoke"></div>
+            <div class="smoke"><img src="./dist/images/smoke.png" alt="Smoke"><img src="./dist/images/smoke.png" alt="Smoke"></div>
+            <div class="smoke"><img src="./dist/images/smoke.png" alt="Smoke"><img src="./dist/images/smoke.png" alt="Smoke"></div>
+        </div>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script type="module" src="./src/js/main.js"></script>
