--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                     <li><a href="#">MENU</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </ul>
+                <ul class="social-links">
+                    <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
+                    <a href="#"><li><i class="fab fa-twitter"></i></li></a>
+                    <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                </ul>
             </nav>
         </div>
     </header>
