--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         </div>
     </header>
     <!--home showcase-->
-    <main class="home-bg">
+    <section class="showcase">
+        <div class="home-bg rellax" data-rellax-speed="-4"></div>
         <section class="ad">
             <div class="price">
                 <div>
@@ -72,9 +73,10 @@
             <div class="smoke"><img src="./dist/images/smoke.png" alt="Smoke"><img src="./dist/images/smoke.png" alt="Smoke"></div>
             <div class="smoke"><img src="./dist/images/smoke.png" alt="Smoke"><img src="./dist/images/smoke.png" alt="Smoke"></div>
         </div>
-    </main>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
     <script type="module" src="./src/js/main.js"></script>
 </body>
 </html>
