starting about section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </header>
     <!--home showcase-->
     <section class="showcase">
-        <div class="home-bg rellax" data-rellax-speed="-4"></div>
+        <div class="home-bg rellax" data-rellax-speed="-8"></div>
         <section class="ad">
             <div class="price">
                 <div>
@@ -74,6 +74,29 @@
             <div class="smoke"><img src="./dist/images/smoke.png" alt="Smoke"><img src="./dist/images/smoke.png" alt="Smoke"></div>
         </div>
     </section>
+    <!--main-->
+    <main>
+        <!--about-->
+        <section class="about overlap">
+            <div class="paint-stroke">
+                <img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke">
+            </div>
+            <div class="section-wrap">
+                <div class="burger">
+                    <img src="./dist/images/burger.png" alt="Delicious Burger">
+                </div>
+                <div class="description">
+                    <div class="title">
+                        <h2>Natural</h2>
+                    </div>
+                    <h1>100% NATURAL FRESH INGREDIENTS</h1>
+                    <p>
+                        Want the best beef in town? You're in luck! We use high grade, grass fed beef that is marbled with fat in every bite. Don't miss out on what everyone is trying today!
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
