finished about section

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </section>
     <!--main-->
     <main>
-        <!--about-->
-        <section class="about overlap">
+        <!--about--> 
+        <section class="about section overlap">
             <div class="paint-stroke">
                 <img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke">
             </div>
@@ -92,7 +92,13 @@
                     <h1>100% NATURAL FRESH INGREDIENTS</h1>
                     <p>
                         Want the best beef in town? You're in luck! We use high grade, grass fed beef that is marbled with fat in every bite. Don't miss out on what everyone is trying today!
+                        <ul>
+                            <li>Fresh vegetables everyday topped with a light mustard mayonnaise.</li>
+                            <li>Each burger is cooked to order because we prioritize quality.</li>
+                            <li>Our secret seasoning is what makes you crave each more every time.</li>
+                        </ul>
                     </p>
+                    <button type="button" class="btn-primary">ABOUT US</button>
                 </div>
             </div>
         </section>
