--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <nav class="desktop-nav">
                 <ul>
-                    <li><a href="#">HOME</a></li>
+                    <li><a href="#" class="active">HOME</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">MENU</a></li>
                     <li><a href="#">CONTACT</a></li>
