--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
     <header>
         <div class="header-wrap">
-            <div class="logo"><img src="./dist/images/logo.png" alt="Logo"></div>
+            <a href="index.html"><div class="logo"><img src="./dist/images/logo.png" alt="Logo"></div></a>
             <div class="menu">
                 <button class="hamburger" type="button">
                     <span class="hamburger-box">
