first element to use aos

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             </div>
             <div class="section-wrap">
                 <div class="burger">
+                    <aside class="side-info"><img src="./dist/images/side-info.png" alt="Delicious Burger" data-aos="fade-right" data-aos-duration="1000"></aside>
                     <img src="./dist/images/burger.png" alt="Delicious Burger">
                 </div>
                 <div class="description">
