--- a/index.html
+++ b/index.html
@@ -104,6 +104,20 @@
                 </div>
             </div>
         </section>
+        <!--promotion-->
+        <section class="promotion section">
+            <div class="section-wrap">
+                <div class="promo-item">
+                    <img src="./dist/images/entree.jpg" alt="Burger Entree">
+                </div>
+                <div class="promo-item">
+                    <img src="./dist/images/milkshake.jpg" alt="Milkshake">
+                </div>
+                <div class="promo-item">
+                    <img src="./dist/images/hot-dog.jpg" alt="Hot Dog">
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
