finished promotion section

--- a/index.html
+++ b/index.html
@@ -107,13 +107,16 @@
         <!--promotion-->
         <section class="promotion section">
             <div class="section-wrap">
-                <div class="promo-item">
+                <div class="promo-item" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
+                    <h1>BURGERS </br> 25% OFF</h1>
                     <img src="./dist/images/entree.jpg" alt="Burger Entree">
                 </div>
-                <div class="promo-item">
+                <div class="promo-item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                    <h1>MILKSHAKES </br> 10% OFF</h1>
                     <img src="./dist/images/milkshake.jpg" alt="Milkshake">
                 </div>
-                <div class="promo-item">
+                <div class="promo-item" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+                    <h1>HOT DOGS </br> 20% OFF</h1>
                     <img src="./dist/images/hot-dog.jpg" alt="Hot Dog">
                 </div>
             </div>
