finished menu section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="paint-stroke">
                 <img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke">
             </div>
-            <div class="section-wrap">
+            <div class="section-wrap container">
                 <div class="burger">
                     <aside class="side-info"><img src="./dist/images/side-info.png" alt="Delicious Burger" data-aos="fade-right" data-aos-duration="1000"></aside>
                     <img src="./dist/images/burger.png" alt="Delicious Burger">
@@ -106,7 +106,7 @@
         </section>
         <!--promotion-->
         <section class="promotion section">
-            <div class="section-wrap">
+            <div class="section-wrap container">
                 <div class="promo-item" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
                     <h1>BURGERS </br> 25% OFF</h1>
                     <img src="./dist/images/entree.jpg" alt="Burger Entree">
@@ -119,6 +119,36 @@
                     <h1>HOT DOGS </br> 20% OFF</h1>
                     <img src="./dist/images/hot-dog.jpg" alt="Hot Dog">
                 </div>
+            </div>
+        </section>
+        <!--menu-->
+        <section class="menu section">
+            <div class="description container">
+                <div class="title">
+                    <h2>Menu</h2>
+                </div>
+                <h1>WHAT'S NEW</h1>
+                <p>Our menu consists of unbeatable priced items such as burgers, hot dogs, chicken and more.</p>
+            </div>
+            <div class="section-wrap container">
+                <div class="menu-item" data-aos="fade-up" data-aos-delay="100" data-aos-duration="1000">
+                    <img src="./dist/images/dbl-stack.png" alt="Double Stack">
+                    <h3>DOUBLE STACK<span>$7.99</span></h3>
+                    <p>Ever feel like one is not enough? Try the new Double Stack if you can take it!</p>
+                </div>
+                <div class="menu-item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
+                    <img src="./dist/images/chicken-sandwich.png" alt="Chicken Sandwich">
+                    <h3>CHICKEN FILET<span>$4.99</span></h3>
+                    <p>Due to popular demand, we brought back this delicious gem. So simple yet so good.</p>
+                </div>
+                <div class="menu-item" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
+                    <img src="./dist/images/nuggets.png" alt="Chicken Nuggets">
+                    <h3>SPICY NUGGETS<span>$5.00</span></h3>
+                    <p>For all the folks with a spicy tooth. It's time to kick it up a notch.</p>
+                </div>
+            </div>
+            <div class="container">
+                <button type="button" class="btn-primary">VIEW FULL MENU</button>
             </div>
         </section>
     </main>
