transition when hovering over menu item

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <div class="menu-item" data-aos="fade-up" data-aos-delay="200" data-aos-duration="1000">
                     <img src="./dist/images/chicken-sandwich.png" alt="Chicken Sandwich">
                     <h3>CHICKEN FILET<span>$4.99</span></h3>
-                    <p>Due to popular demand, we brought back this delicious gem. So simple yet so good.</p>
+                    <p>Due to popular demand, we brought back this simple, delicious gem.</p>
                 </div>
                 <div class="menu-item" data-aos="fade-up" data-aos-delay="300" data-aos-duration="1000">
                     <img src="./dist/images/nuggets.png" alt="Chicken Nuggets">
