starting testimonial section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,20 @@
                 <button type="button" class="btn-primary">VIEW FULL MENU</button>
             </div>
         </section>
+        <!--testimonials-->
+        <section class="testimonials section">
+            <div class="paint-stroke">
+                <img src="./dist/images/paint-stroke-white.png" alt="Black Paint Stroke">
+            </div>
+            <div class="section-wrap">
+                <div class="quote">
+                    <img src="./dist/images/black.png" alt="Black Background">
+                </div>
+                <div class="testimonial-img">
+                    <img src="./dist/images/testimonials.png" alt="Testimonial Image">
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
