finished testimonial section (slick.js)

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="dist/hamburgers.css" rel="stylesheet">
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="dist/slick/slick.css">
     <link rel="stylesheet" href="./dist/main.min.css">
 </head>
 <body>
@@ -158,7 +159,23 @@
             </div>
             <div class="section-wrap">
                 <div class="quote">
-                    <img src="./dist/images/black.png" alt="Black Background">
+                    <div class="quotation-mark">
+                        <i class="fas fa-quote-right"></i>
+                    </div>
+                    <div class="carousel">
+                        <div class="carousel-item">
+                            <p>Every time my family and I go, we get the same quality every time...fresh off the grill.</p>
+                            <h3><span>-</span>VALERIE</h3>
+                        </div>
+                        <div class="carousel-item">
+                            <p>Stopped by for the first time last week and these milkshakes are the best in town.</p>
+                            <h3><span>-</span>DESMOND</h3>
+                        </div>
+                        <div class="carousel-item">
+                            <p>Had a great experience, customer service is definitely A+. Definitely coming back for more!</p>
+                            <h3><span>-</span>KAREN</h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="testimonial-img">
                     <img src="./dist/images/testimonials.png" alt="Testimonial Image">
@@ -170,6 +187,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./dist/slick/slick.min.js"></script>
+    <script type="module" src="./src/js/home.js"></script>
     <script type="module" src="./src/js/main.js"></script>
 </body>
 </html>
