--- a/index.html
+++ b/index.html
@@ -182,6 +182,16 @@
                 </div>
             </div>
         </section>
+        <!--instagram-->
+        <section class="instragram">
+            <div class="description container">
+                <div class="title">
+                    <h2>Follow Us</h2>
+                </div>
+                <h1>INSTAGRAM</h1>
+                <p>Stay up to date with us by following our instagram @joo.theme.3</p>
+            </div>
+        </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
