fixed testimonial img sizing issue past widescreen breakpoint

--- a/index.html
+++ b/index.html
@@ -183,13 +183,16 @@
             </div>
         </section>
         <!--instagram-->
-        <section class="instragram">
+        <section class="instagram section">
             <div class="description container">
                 <div class="title">
                     <h2>Follow Us</h2>
                 </div>
                 <h1>INSTAGRAM</h1>
                 <p>Stay up to date with us by following our instagram @joo.theme.3</p>
+            </div>
+            <div class="section-wrap">
+
             </div>
         </section>
     </main>
