instagram photos layout

--- a/index.html
+++ b/index.html
@@ -191,8 +191,19 @@
                 <h1>INSTAGRAM</h1>
                 <p>Stay up to date with us by following our instagram @joo.theme.3</p>
             </div>
-            <div class="section-wrap">
-
+            <div class="section-row">
+                <div class="section-wrap">
+                    <div><img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56161539_2135183743440007_6042338864626323758_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=qOaMy60tDqcAX_2VHlN&oh=27d231d79ff054a556ac2d11a7737f4a&oe=5F04E758" alt="1"></div>
+                    <div><img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/57052974_2148585461903889_953847305816317733_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=JO54Ur_vtc4AX-h9bkH&oh=e737c4d437d6d57a210e0cef4f5ccfbe&oe=5F05B435" alt="2"></div>
+                    <div><img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56368871_142388940145748_2351320277140203970_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=BUSKqhsaERUAX_Ojbx8&oh=2191bc471c410da83c009d0284264c40&oe=5F042AD6" alt="3"></div>
+                </div>
+            </div>
+            <div class="section-row">
+                <div class="section-wrap">
+                    <div><img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56520200_2302680210055036_3764346179199451573_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=Z_k-O-wscFYAX_szl3m&oh=4b143ba1fe2bb8f5636fd9dd64ac3daa&oe=5F033E5C" alt="4"></div>
+                    <div><img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56980894_2291790727592062_1249643365082704656_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=O4O9sGlfqEUAX8f2Zq1&oh=a562b13e5060eb7d35326635c1ec3b0d&oe=5F04D5EE" alt="5"></div>
+                    <div><img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/57487896_1112360612279322_9077064914643657958_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=k6Ow2rwQAYgAX-C24s4&oh=d0bea501c9a80747b8ec38e0faf187fc&oe=5F05B2E2" alt="6"></div>
+                </div>
             </div>
         </section>
     </main>
