--- a/index.html
+++ b/index.html
@@ -224,6 +224,20 @@
                 </div>
             </div>
         </section>
+        <!--footer-->
+        <footer class="section">
+            <div class="newsletter">
+                <div class="heading"></div>
+                <div class="email"></div>
+            </div>
+            <div id="map"></div>
+            <div class="info">
+                <div class="section-wrap">
+
+                </div>
+                <div class="contact-info"></div>
+            </div>
+        </footer>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
