started working on newsletter section of footer

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <!--testimonials-->
         <section class="testimonials section">
             <div class="paint-stroke">
-                <img src="./dist/images/paint-stroke-white.png" alt="Black Paint Stroke">
+                <img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke">
             </div>
             <div class="section-wrap">
                 <div class="quote">
@@ -224,21 +224,34 @@
                 </div>
             </div>
         </section>
-        <!--footer-->
-        <footer class="section">
-            <div class="newsletter">
-                <div class="heading"></div>
-                <div class="email"></div>
-            </div>
-            <div id="map"></div>
-            <div class="info">
-                <div class="section-wrap">
-
-                </div>
-                <div class="contact-info"></div>
-            </div>
-        </footer>
     </main>
+    <!--footer-->
+    <footer class="section">
+        <div class="newsletter">
+            <div class="paint-stroke">
+                <img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke">
+            </div>
+            <div class="section-wrap container">
+                <div class="heading">
+                    <h1>JOIN OUR NEWSLETTER</h1>
+                    <p>Subscribe to get updates on changes in our menu, new items and more.</p>
+                </div>
+                <form>
+                    <div class="section-wrap">
+                        <input type="email" class="input" placeholder="Your Email Address">
+                        <button type="button" class="btn-secondary">SUBSCRIBE</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div id="map"></div>
+        <div class="info">
+            <div class="section-wrap">
+
+            </div>
+            <div class="contact-info"></div>
+        </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
