--- a/index.html
+++ b/index.html
@@ -196,15 +196,15 @@
             </div>
             <div class="section-row container">
                 <div class="section-wrap">
-                    <a href="https://www.instagram.com/p/BwP0NZVlfv6/">
+                    <a href="https://www.instagram.com/p/BwP0NZVlfv6/" target="_blank">
                         <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56161539_2135183743440007_6042338864626323758_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=qOaMy60tDqcAX_2VHlN&oh=27d231d79ff054a556ac2d11a7737f4a&oe=5F04E758" alt="1">
                         <div class="tint"></div>
                     </a>
-                    <a href="https://www.instagram.com/p/BwP0LvTlvpH/">
+                    <a href="https://www.instagram.com/p/BwP0LvTlvpH/" target="_blank">
                         <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/57052974_2148585461903889_953847305816317733_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=JO54Ur_vtc4AX-h9bkH&oh=e737c4d437d6d57a210e0cef4f5ccfbe&oe=5F05B435" alt="2">
                         <div class="tint"></div>
                     </a>
-                    <a href="https://www.instagram.com/p/BwP0KLQlt5u/">
+                    <a href="https://www.instagram.com/p/BwP0KLQlt5u/" target="_blank">
                         <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56368871_142388940145748_2351320277140203970_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=BUSKqhsaERUAX_Ojbx8&oh=2191bc471c410da83c009d0284264c40&oe=5F042AD6" alt="3">
                         <div class="tint"></div>
                     </a>
@@ -212,15 +212,15 @@
             </div>
             <div class="section-row container">
                 <div class="section-wrap">
-                    <a href="https://www.instagram.com/p/BwP0INNlPel/">
+                    <a href="https://www.instagram.com/p/BwP0INNlPel/" target="_blank">
                         <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56520200_2302680210055036_3764346179199451573_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=Z_k-O-wscFYAX_szl3m&oh=4b143ba1fe2bb8f5636fd9dd64ac3daa&oe=5F033E5C" alt="4">
                         <div class="tint"></div>
                     </a>
-                    <a href="https://www.instagram.com/p/BwP0GbslBi5/">
+                    <a href="https://www.instagram.com/p/BwP0GbslBi5/" target="_blank">
                         <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/56980894_2291790727592062_1249643365082704656_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=O4O9sGlfqEUAX8f2Zq1&oh=a562b13e5060eb7d35326635c1ec3b0d&oe=5F04D5EE" alt="5">
                         <div class="tint"></div>
                     </a>
-                    <a href="https://www.instagram.com/p/BwP0EfMFTuc/">
+                    <a href="https://www.instagram.com/p/BwP0EfMFTuc/" target="_blank">
                         <img src="//scontent.cdninstagram.com/v/t51.2885-15/e35/57487896_1112360612279322_9077064914643657958_n.jpg?_nc_ht=scontent.cdninstagram.com&_nc_ohc=k6Ow2rwQAYgAX-C24s4&oh=d0bea501c9a80747b8ec38e0faf187fc&oe=5F05B2E2" alt="6">
                         <div class="tint"></div>
                     </a>
@@ -249,10 +249,50 @@
         </div>
         <div id="mapid"></div>
         <div class="info">
-            <div class="section-wrap">
-
+            <div class="section-wrap container">
+                <div class="logo footer-item">
+                    <img src="./dist/images/logo.png" alt="Logo">
+                    <p>Any questions or concerns, please refer to the contact information listed below.</p>
+                </div>
+                <div class="footer-item">
+                    <h2>OUR LOCATIONS</h2>
+                    <ul>
+                        <li>16122 Collins Street</li>
+                        <li>295 Melbourne Street</li>
+                    </ul>
+                </div>
+                <div class="footer-item">
+                    <h2>CONTACT DETAILS</h2>
+                    <ul>
+                        <li>(396) 847-2637</li>
+                        <li>timive@jooburger.com</li>
+                    </ul>
+                </div>
+                <div class="footer-item">
+                    <h2>OPENING HOURS</h2>
+                    <ul>
+                        <li>Mon - Fri --------- 9am - 12pm</li>
+                        <li>Saturday --------- 9am - 12pm</li>
+                        <li>Sunday ----------------- Closed</li>
+                    </ul>
+                </div>
             </div>
-            <div class="contact-info"></div>
+            <div class="contact-info container">
+                <div class="section-wrap">
+                    <p><span>Joo</span> &copy 2020. All Rights Reserved.</p>
+                    <ul class="social-links">
+                        <a href="#"><li><i class="fab fa-facebook-f"></i></li></a>
+                        <a href="#"><li><i class="fab fa-twitter"></i></li></a>
+                        <a href="#"><li><i class="fab fa-instagram"></i></li></a>
+                    </ul>
+                    <ul class="footer-nav">
+                        <li>Home</li>
+                        <li>About</li>
+                        <li>Pricing</li>
+                        <li>Contact</li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
 
