footer section complete

--- a/index.html
+++ b/index.html
@@ -257,27 +257,30 @@
                 <div class="footer-item">
                     <h2>OUR LOCATIONS</h2>
                     <ul>
-                        <li>16122 Collins Street</li>
-                        <li>295 Melbourne Street</li>
+                        <li><span><i class="fas fa-map-marker-alt"></i></span>16122 Collins Street</li>
+                        <li><span><i class="fas fa-map-marker-alt"></i></span>295 Melbourne Street</li>
                     </ul>
                 </div>
                 <div class="footer-item">
                     <h2>CONTACT DETAILS</h2>
                     <ul>
-                        <li>(396) 847-2637</li>
-                        <li>timive@jooburger.com</li>
+                        <li><span><i class="fas fa-phone-alt"></i></span><a href="tel:2025550115">(396) 847-2637</a></li>
+                        <li><span><i class="fas fa-envelope"></i></i></span><a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&tf=1&source=mailto&to=test@test.com">timive@jooburger.com</a></li>
                     </ul>
                 </div>
                 <div class="footer-item">
                     <h2>OPENING HOURS</h2>
                     <ul>
-                        <li>Mon - Fri --------- 9am - 12pm</li>
-                        <li>Saturday --------- 9am - 12pm</li>
-                        <li>Sunday ----------------- Closed</li>
+                        <li><span><i class="fas fa-chevron-right"></i></span>Mon - Fri --------- 9am - 12pm</li>
+                        <li><span><i class="fas fa-chevron-right"></i></span>Saturday --------- 9am - 12pm</li>
+                        <li><span><i class="fas fa-chevron-right"></i></span>Sunday ---------------- <span>Closed</span></li>
                     </ul>
                 </div>
             </div>
             <div class="contact-info container">
+                <div class="paint-stroke">
+                    <img src="./dist/images/paint-stroke-black.png" alt="Black Paint Stroke">
+                </div>
                 <div class="section-wrap">
                     <p><span>Joo</span> &copy 2020. All Rights Reserved.</p>
                     <ul class="social-links">
@@ -286,10 +289,10 @@
                         <a href="#"><li><i class="fab fa-instagram"></i></li></a>
                     </ul>
                     <ul class="footer-nav">
-                        <li>Home</li>
-                        <li>About</li>
-                        <li>Pricing</li>
-                        <li>Contact</li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Menu</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
             </div>
