working on button that takes you to top

--- a/index.html
+++ b/index.html
@@ -299,6 +299,9 @@
         </div>
     </footer>
 
+    <!--Takes you to top of page-->
+    <a href="#" class="back-to-top"></a>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
