--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </header>
     <!--home showcase-->
-    <section class="showcase">
+    <section class="showcase" id="headerID">
         <div class="home-bg rellax" data-rellax-speed="-8"></div>
         <section class="ad">
             <div class="price">
@@ -300,9 +300,12 @@
     </footer>
 
     <!--Takes you to top of page-->
-    <a href="#" class="back-to-top"></a>
+    <a href="#headerID" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./dist/slick/slick.min.js"></script>
