--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <!--home showcase-->
-    <section class="showcase" id="headerID">
+    <section class="showcase" id="smoothScroll">
         <div class="home-bg rellax" data-rellax-speed="-8"></div>
         <section class="ad">
             <div class="price">
@@ -296,7 +296,7 @@
     </footer>
 
     <!--Takes you to top of page-->
-    <a href="#headerID" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
+    <a href="#smoothScroll" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
 
     <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
