finished services section of about page

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
         <!--services-->
         <section class="services section">
             <div class="paint-stroke"><img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke"></div>
-            <div class="section-wrap">
+            <div class="section-wrap container">
                 <div class="service-item">
                     <span><i class="fas fa-hamburger"></i></span>
                     <h1>QUALITY PRODUCTS</h1>
@@ -101,6 +101,17 @@
             </div>
         </section>
     </main>
+
+    <!--product-->
+    <section class="product section">
+        <div class="description">
+            <div class="title">
+                <h2>Our Product</h2>
+            </div>
+            <h1>GREAT TASTY FOOD</h1>
+            <p>From a small food truck located in the depth of New York City to opening a couple of locations in the US, we've grown a lot from when we first started. Each store consistantly replicates our iconic original recipe to the smallest detail. Our duty is to provide not only great service, but quality meals.</p>
+        </div>
+    </section>
 
     <!--footer-->
     <footer class="section">
