--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
         <!--services-->
         <section class="services section">
             <div class="paint-stroke"><img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke"></div>
-            <div class="section-wrap container">
+            <div class="section-wrap container" data-aos="fade-up" data-aos-duration="1000">
                 <div class="service-item">
                     <span><i class="fas fa-hamburger"></i></span>
                     <h1>QUALITY PRODUCTS</h1>
@@ -100,18 +100,54 @@
                 </div>
             </div>
         </section>
-    </main>
-
-    <!--product-->
-    <section class="product section">
-        <div class="description">
-            <div class="title">
-                <h2>Our Product</h2>
+        <!--product-->
+        <section class="product section">
+            <div class="description container">
+                <div class="title">
+                    <h2>Our Product</h2>
+                </div>
+                <h1>NATURAL INGREDIENTS</h1>
+                <p>A closer look at what really goes into our fresh sandwiches.</p>
             </div>
-            <h1>GREAT TASTY FOOD</h1>
-            <p>From a small food truck located in the depth of New York City to opening a couple of locations in the US, we've grown a lot from when we first started. Each store consistantly replicates our iconic original recipe to the smallest detail. Our duty is to provide not only great service, but quality meals.</p>
-        </div>
-    </section>
+            <div class="section-wrap container">
+                <div class="list list-left">
+                    <ul>
+                        <li data-aos="fade-right" data-aos-duration="1000">
+                            <h3>MUSTARD MAYONNAISE</h3>
+                            <p>The touch of mustard in the mayonnaise enhances the flavor.</p>
+                        </li>
+                        <li data-aos="fade-right" data-aos-duration="1000">
+                            <h3>SLICED TOMATO</h3>
+                            <p>Fresh, cold tomatos cut for every single sandwich.</p>
+                        </li>
+                        <li data-aos="fade-right" data-aos-duration="1000">
+                            <h3>100% CHEDDAR CHEESE</h3>
+                            <p>Perfectly chosen cheese to melt on top of the beef.</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="burger" data-aos="fade-up" data-aos-duration="1000">
+                    <img src="./dist/images/burger.png" alt="Burger">
+                </div>
+                <div class="list list-right">
+                    <ul>
+                        <li data-aos="fade-left" data-aos-duration="1000">
+                            <h3>THICK ANGUS</h3>
+                            <p>Our grass-fed beef is nothing to mess around with.</p>
+                        </li>
+                        <li data-aos="fade-left" data-aos-duration="1000">
+                            <h3>FRESH LETTUCE</h3>
+                            <p>You can't have a burger without that crunch of fresh lettuce.</p>
+                        </li>
+                        <li data-aos="fade-left" data-aos-duration="1000">
+                            <h3>TASTY BUN</h3>
+                            <p>To bring it all together, the burger is hugged by a sweet sesame roll.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!--footer-->
     <footer class="section">
