getting started on menu page

--- a/menu.html
+++ b/menu.html
@@ -53,97 +53,41 @@
     </header>
     
     <!--showcase-->
-    <section class="showcase-2 about-showcase" id="smoothScroll">
+    <section class="showcase-2 menu-showcase" id="smoothScroll">
         <div class="text">
-            <h1>ABOUT US</h1>
-            <h3>Info about our delicious grill</h3>
+            <h1>OUR MENU</h1>
+            <h3>Pick your poison, at a great value</h3>
         </div>
         <div class="paint-stroke"><img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke"></div>
     </section>
 
     <!--main-->
-    <main class="about-main">
-        <!--info-->
-        <section class="about-info section">
-            <div class="section-wrap container">
-                <div class="description">
-                    <div class="title">
-                        <h2>About Us</h2>
-                    </div>
-                    <h1>GREAT TASTY FOOD</h1>
-                    <p>From a small food truck located in the depth of New York City to opening a couple of locations in the US, we've grown a lot from when we first started. Each store consistantly replicates our iconic original recipe to the smallest detail. Our duty is to provide not only great service, but quality meals.</p>
-                    <button type="button" class="btn-primary">OUR MENU</button>
-                </div>
-                <div class="about-img">
-                    <img src="./dist/images/about-info.png">
-                </div>
-            </div>
-        </section>
-        <!--services-->
-        <section class="services section">
-            <div class="paint-stroke"><img src="./dist/images/paint-stroke-white.png" alt="White Paint Stroke"></div>
-            <div class="section-wrap container" data-aos="fade-up" data-aos-duration="1000">
-                <div class="service-item">
-                    <span><i class="fas fa-hamburger"></i></span>
-                    <h1>QUALITY PRODUCTS</h1>
-                    <p>We always strive for the best quality products.</p>
-                </div>
-                <div class="service-item">
-                    <span><i class="fas fa-bell"></i></span>
-                    <h1>FAST SERVICE</h1>
-                    <p>Our well trained employees is what makes our service so great.</p>
-                </div>
-                <div class="service-item">
-                    <span><i class="fas fa-wallet"></i></i></span>
-                    <h1>LOW PRICES</h1>
-                    <p>You won't be able to beat our prices for the same quality.</p>
-                </div>
-            </div>
-        </section>
-        <!--product-->
-        <section class="product section">
-            <div class="description container">
+    <main class="menu-main">
+        <!--entree menu-->
+        <section class="entrees section container">
+            <div class="description">
                 <div class="title">
-                    <h2>Our Product</h2>
+                    <h2>Menu</h2>
                 </div>
-                <h1>NATURAL INGREDIENTS</h1>
-                <p>A closer look at what really goes into our fresh sandwiches.</p>
+                <h1>DELICIOUS ENTREES</h1>
+                <p>Find your favorite from our diverse selection.</p>
             </div>
             <div class="section-wrap container">
-                <div class="list list-left">
-                    <ul>
-                        <li data-aos="fade-right" data-aos-duration="1000">
-                            <h3>MUSTARD MAYONNAISE</h3>
-                            <p>The touch of mustard in the mayonnaise enhances the flavor.</p>
-                        </li>
-                        <li data-aos="fade-right" data-aos-duration="1000">
-                            <h3>SLICED TOMATO</h3>
-                            <p>Fresh, cold tomatos cut for every single sandwich.</p>
-                        </li>
-                        <li data-aos="fade-right" data-aos-duration="1000">
-                            <h3>100% CHEDDAR CHEESE</h3>
-                            <p>Perfectly chosen cheese to melt on top of the beef.</p>
-                        </li>
-                    </ul>
+                <div class="menu-item entree-left">
+                    <div class="menu-img">
+                        <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                    </div>
+                    <div class="menu-description">
+                        <div class="section-wrap">
+                            <h3 class="name">CHEESEBURGER</h3>
+                            <span class="line"></span>
+                            <h3 class="price">$3.99</h3>
+                        </div>
+                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
                 </div>
-                <div class="burger" data-aos="fade-up" data-aos-duration="1000">
-                    <img src="./dist/images/burger.png" alt="Burger">
-                </div>
-                <div class="list list-right">
-                    <ul>
-                        <li data-aos="fade-left" data-aos-duration="1000">
-                            <h3>THICK ANGUS</h3>
-                            <p>Our grass-fed beef is nothing to mess around with.</p>
-                        </li>
-                        <li data-aos="fade-left" data-aos-duration="1000">
-                            <h3>FRESH LETTUCE</h3>
-                            <p>You can't have a burger without that crunch of fresh lettuce.</p>
-                        </li>
-                        <li data-aos="fade-left" data-aos-duration="1000">
-                            <h3>TASTY BUN</h3>
-                            <p>To bring it all together, the burger is hugged by a sweet sesame roll.</p>
-                        </li>
-                    </ul>
+                <div class="entree-right">
+
                 </div>
             </div>
         </section>
