--- a/menu.html
+++ b/menu.html
@@ -86,6 +86,19 @@
                         <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
                     </div>
                 </div>
+                <div class="menu-item entree-left">
+                    <div class="menu-img">
+                        <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                    </div>
+                    <div class="menu-description">
+                        <div class="section-wrap">
+                            <h3 class="name">CHEESEBURGER</h3>
+                            <span class="line"></span>
+                            <h3 class="price">$3.99</h3>
+                        </div>
+                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
+                </div>
                 <div class="entree-right">
 
                 </div>
