--- a/menu.html
+++ b/menu.html
@@ -73,35 +73,124 @@
                 <p>Find your favorite from our diverse selection.</p>
             </div>
             <div class="section-wrap container">
-                <div class="menu-item entree-left">
-                    <div class="menu-img">
-                        <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
-                    </div>
-                    <div class="menu-description">
-                        <div class="section-wrap">
-                            <h3 class="name">CHEESEBURGER</h3>
-                            <span class="line"></span>
-                            <h3 class="price">$3.99</h3>
+                <div class="entree-left">
+                    <div class="menu-item">
+                        <div class="menu-img">
+                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
                         </div>
-                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
-                    </div>
-                </div>
-                <div class="menu-item entree-left">
-                    <div class="menu-img">
-                        <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
-                    </div>
-                    <div class="menu-description">
-                        <div class="section-wrap">
-                            <h3 class="name">CHEESEBURGER</h3>
-                            <span class="line"></span>
-                            <h3 class="price">$3.99</h3>
+                        <div class="menu-description">
+                            <div class="section-wrap">
+                                <h3 class="name">CHEESEBURGER</h3>
+                                <span class="line"></span>
+                                <h3 class="price">$3.99</h3>
+                            </div>
+                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
                         </div>
-                        <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-img">
+                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                        </div>
+                        <div class="menu-description">
+                            <div class="section-wrap">
+                                <h3 class="name">CHEESEBURGER</h3>
+                                <span class="line"></span>
+                                <h3 class="price">$3.99</h3>
+                            </div>
+                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-img">
+                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                        </div>
+                        <div class="menu-description">
+                            <div class="section-wrap">
+                                <h3 class="name">CHEESEBURGER</h3>
+                                <span class="line"></span>
+                                <h3 class="price">$3.99</h3>
+                            </div>
+                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-img">
+                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                        </div>
+                        <div class="menu-description">
+                            <div class="section-wrap">
+                                <h3 class="name">CHEESEBURGER</h3>
+                                <span class="line"></span>
+                                <h3 class="price">$3.99</h3>
+                            </div>
+                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="entree-right">
-
+                    <div class="menu-item">
+                        <div class="menu-img">
+                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                        </div>
+                        <div class="menu-description">
+                            <div class="section-wrap">
+                                <h3 class="name">CHEESEBURGER</h3>
+                                <span class="line"></span>
+                                <h3 class="price">$3.99</h3>
+                            </div>
+                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-img">
+                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                        </div>
+                        <div class="menu-description">
+                            <div class="section-wrap">
+                                <h3 class="name">CHEESEBURGER</h3>
+                                <span class="line"></span>
+                                <h3 class="price">$3.99</h3>
+                            </div>
+                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-img">
+                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                        </div>
+                        <div class="menu-description">
+                            <div class="section-wrap">
+                                <h3 class="name">CHEESEBURGER</h3>
+                                <span class="line"></span>
+                                <h3 class="price">$3.99</h3>
+                            </div>
+                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        </div>
+                    </div>
+                    <div class="menu-item">
+                        <div class="menu-img">
+                            <img src="./dist/images/cheeseburger.png" alt="Cheeseburger">
+                        </div>
+                        <div class="menu-description">
+                            <div class="section-wrap">
+                                <h3 class="name">CHEESEBURGER</h3>
+                                <span class="line"></span>
+                                <h3 class="price">$3.99</h3>
+                            </div>
+                            <p>You can never go wrong with a classic, fresh made cheeseburger.</p>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </section>
+        <!--section break-->
+        <section class="section-break section">
+            <div class="description">
+                <div class="title">
+                    <h2></h2>
+                </div>
+                <h1></h1>
+                <p></p>
             </div>
         </section>
     </main>
